# lark

./: Cargo.toml  PLAN.md  README.md  TODO.md
examples/: init.rhai
src/: main.rs
src/config/: engine.rs  mod.rs  settings.rs
src/editor/: buffer.rs  cursor.rs  editor.rs  file_browser.rs  layout.rs  mod.rs  mode.rs  pane.rs  tab.rs  workspace.rs
src/finder/: fzf.rs  grep.rs  mod.rs
src/input/: handler.rs  keymap.rs  mod.rs
src/render/: renderer.rs
src/scripting/: engine.rs  mod.rs
src/scripting/api/: config.rs  mod.rs
src/syntax/: highlighter.rs  installer.rs  languages.rs  metadata.rs  mod.rs
src/theme/: colors.rs  mod.rs  theme.rs
