[package]
name = "lark"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "5"
futures = "0.3"
rhai = "1"
ropey = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Tree-sitter for syntax highlighting (grammars installed separately)
tree-sitter = "0.24"
libloading = "0.8"  # For dynamic library loading
